[gd_scene load_steps=9 format=3 uid="uid://crsb80qye44v"]

[ext_resource type="Script" uid="uid://7afgcvdmbk0n" path="res://Components/Player/character_control.gd" id="1_6d8je"]
[ext_resource type="PackedScene" uid="uid://7wnkn46upv5o" path="res://Assets/Characters/character-female-b.glb" id="2_4qqls"]
[ext_resource type="PackedScene" uid="uid://be654a1tctso0" path="res://Assets/Characters/character-male-a.glb" id="3_4qqls"]
[ext_resource type="AudioStream" uid="uid://c8u1i7ukwkuj0" path="res://Assets/Music/FX/WalkingOnFloor.wav" id="4_7uyyc"]
[ext_resource type="AudioStream" uid="uid://3tp148y0qorg" path="res://Assets/Music/FX/SFX_Footstep_Wood_2.wav" id="5_7uyyc"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_n7csw"]
height = 1.56445

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_68g04"]
lifetime_randomness = 0.29
direction = Vector3(1, 1, 1)
spread = 84.036
initial_velocity_max = 2.0
gravity = Vector3(0, -3, 0)
scale_min = 0.07
scale_max = 0.15

[sub_resource type="SphereMesh" id="SphereMesh_kne5a"]
radius = 0.25
height = 0.5

[node name="Player" type="CharacterBody3D" groups=["players"]]
collision_mask = 7
axis_lock_linear_y = true
script = ExtResource("1_6d8je")

[node name="character_model" type="Node3D" parent="."]
transform = Transform3D(0.443086, 0, -0.231679, 0, 0.5, 0, 0.231679, 0, 0.443086, 0, 0, 0)

[node name="1" parent="character_model" instance=ExtResource("3_4qqls")]

[node name="2" parent="character_model" instance=ExtResource("2_4qqls")]
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0.16502, -0.000268212)
shape = SubResource("CylinderShape3D_n7csw")

[node name="ParticleGenerator" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, -0.1)
amount = 20
amount_ratio = 0.0
lifetime = 0.5
speed_scale = 0.5
process_material = SubResource("ParticleProcessMaterial_68g04")
draw_pass_1 = SubResource("SphereMesh_kne5a")

[node name="PickUpDisplay" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.460266, 0)

[node name="FootStepPlayer" type="Node3D" parent="."]

[node name="1" type="AudioStreamPlayer3D" parent="FootStepPlayer"]
stream = ExtResource("4_7uyyc")
volume_db = -12.06
max_db = 6.0
autoplay = true

[node name="2" type="AudioStreamPlayer3D" parent="FootStepPlayer"]
stream = ExtResource("5_7uyyc")
